클래스 path 변경, 주석 제거